2016-02-07
Set up workspace (and added the option for both save and load flags concurrently)