@@ -1,0 +1,8 @@
+//
+// Created by joelm on 2016-02-07.
+//
+
+#ifndef PROJECT_PATH_H
+#define PROJECT_PATH_H
+
+#endif //PROJECT_PATH_H
