@@ -1,2 +1,5 @@
 2016-02-07
+Imported the provided priority queue and created files for the path finding.  I need sleep.  Goodnight.
+
+2016-02-07
 Set up workspace (and added the option for both save and load flags concurrently)
